--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   dio: ^4.0.0
+  flutter_bloc: ^7.3.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
